Fix auth button on mobile

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -106,12 +106,22 @@ html, body
         display: none;
     }
 
+    &:hover > form > .auth-hover-hide
+    {
+        display: none;
+    }
+
     .auth-hover-show
     {
         display: none;
     }
 
     &:hover > .auth-hover-show
+    {
+        display: block;
+    }
+
+    &:hover > form > .auth-hover-show
     {
         display: block;
     }
